# hotel-reservation-mlops

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Makefile  artifacts.dvc  deployment.yaml  features.json  main.py  pyproject.toml
.circleci/: config.yml
.dvc/: config
app/config/: config.yaml  model_params.py  paths_config.py  secrets.py
app/pipeline/: training_pipeline.py
app/srv/: data_ingestion.py  data_preprocessing.py  model_training.py
app/srv/api/: controller.py  dto.py
app/utils/: error.py  file_handler.py  logger.py
custom_jenkins/: Dockerfile
notebook/: modeling.ipynb
tests/: testing.py
